@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,7 +16,6 @@ import java.io.IOException;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -83,7 +82,7 @@ final class AhaCollectionScheduleImpl implements AhaCollectionSchedule {
 
         if (table.isEmpty()) {
             logger.warn("No result table found.");
-            return Collections.emptyMap();
+            return Map.of();
         }
 
         final Iterator<Element> rowIt = table.get(0).getElementsByTag("tr").iterator();
