@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -17,11 +17,9 @@ import static org.openhab.binding.androidtv.internal.protocol.philipstv.Connecti
 import static org.openhab.binding.androidtv.internal.protocol.philipstv.PhilipsTVBindingConstants.*;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 import java.util.stream.IntStream;
-import java.util.stream.Stream;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
@@ -49,6 +47,7 @@ import org.openhab.core.thing.ThingStatus;
 import org.openhab.core.thing.ThingStatusDetail;
 import org.openhab.core.types.Command;
 import org.openhab.core.types.RefreshType;
+import org.openhab.core.util.ColorUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -63,10 +62,9 @@ import com.fasterxml.jackson.databind.node.ObjectNode;
 @NonNullByDefault
 public class AmbilightService implements PhilipsTVService {
 
-    private static final List<String> AMBILIGHT_COLOR_CHANNELS = Stream
-            .of(CHANNEL_AMBILIGHT_COLOR, CHANNEL_AMBILIGHT_LEFT_COLOR, CHANNEL_AMBILIGHT_RIGHT_COLOR,
-                    CHANNEL_AMBILIGHT_TOP_COLOR, CHANNEL_AMBILIGHT_BOTTOM_COLOR)
-            .collect(Collectors.toList());
+    private static final Set<String> AMBILIGHT_COLOR_CHANNELS = Set.of(CHANNEL_AMBILIGHT_COLOR,
+            CHANNEL_AMBILIGHT_LEFT_COLOR, CHANNEL_AMBILIGHT_RIGHT_COLOR, CHANNEL_AMBILIGHT_TOP_COLOR,
+            CHANNEL_AMBILIGHT_BOTTOM_COLOR);
     private static final int AMBILIGHT_HUE_NODE_ID = 2131230774;
     private static final int AMBILIGHT_BRIGHTNESS_NODE_ID = 2131230769;
     private static final String AMBILIGHT_MODE_MANUAL = "manual";
@@ -161,7 +159,7 @@ public class AmbilightService implements PhilipsTVService {
         value.setControllable("true");
 
         ValuesDTO values = new ValuesDTO(value);
-        TvSettingsUpdateDTO ambilightHuePower = new TvSettingsUpdateDTO(Collections.singletonList(values));
+        TvSettingsUpdateDTO ambilightHuePower = new TvSettingsUpdateDTO(List.of(values));
 
         String ambilightHuePowerJson = OBJECT_MAPPER.writeValueAsString(ambilightHuePower);
         logger.debug("Post Ambilight hue power state json: {}", ambilightHuePowerJson);
@@ -246,10 +244,11 @@ public class AmbilightService implements PhilipsTVService {
 
         ObjectNode rootNode = OBJECT_MAPPER.createObjectNode();
 
+        int[] rgb = ColorUtil.hsbToRgb(hsb);
         ObjectNode pixel = OBJECT_MAPPER.createObjectNode();
-        pixel.put("r", hsb.getRed().intValue());
-        pixel.put("g", hsb.getGreen().intValue());
-        pixel.put("b", hsb.getBlue().intValue());
+        pixel.put("r", rgb[0]);
+        pixel.put("g", rgb[1]);
+        pixel.put("b", rgb[2]);
 
         ObjectNode sidePixels = OBJECT_MAPPER.createObjectNode();
         // pixel declaration in json start with 0
