@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -22,7 +22,6 @@ import java.net.UnknownHostException;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -473,7 +472,7 @@ public class SmartherBridgeHandler extends BaseBridgeHandler
     public List<Location> getLocations() {
         final ExpiringCache<List<Location>> localLocationCache = this.locationCache;
         final List<Location> locations = (localLocationCache != null) ? localLocationCache.getValue() : null;
-        return (locations != null) ? locations : Collections.emptyList();
+        return (locations != null) ? locations : List.of();
     }
 
     @Override
