@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,18 +16,22 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.binding.heos.internal.json.payload.BrowseResult;
 import org.openhab.binding.heos.internal.json.payload.Media;
 import org.openhab.binding.heos.internal.json.payload.YesNoEnum;
+import org.openhab.core.events.EventPublisher;
 import org.openhab.core.thing.ChannelUID;
 import org.openhab.core.thing.binding.BaseDynamicStateDescriptionProvider;
+import org.openhab.core.thing.i18n.ChannelTypeI18nLocalizationService;
+import org.openhab.core.thing.link.ItemChannelLinkRegistry;
 import org.openhab.core.thing.type.DynamicStateDescriptionProvider;
 import org.openhab.core.types.StateOption;
+import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.Reference;
 
 /**
  * Dynamically create the users list of favorites and playlists.
@@ -38,12 +42,24 @@ import org.osgi.service.component.annotations.Component;
 @NonNullByDefault
 public class HeosDynamicStateDescriptionProvider extends BaseDynamicStateDescriptionProvider {
 
+    @Activate
+    public HeosDynamicStateDescriptionProvider(final @Reference EventPublisher eventPublisher,
+            final @Reference ItemChannelLinkRegistry itemChannelLinkRegistry,
+            final @Reference ChannelTypeI18nLocalizationService channelTypeI18nLocalizationService) {
+        this.eventPublisher = eventPublisher;
+        this.itemChannelLinkRegistry = itemChannelLinkRegistry;
+        this.channelTypeI18nLocalizationService = channelTypeI18nLocalizationService;
+    }
+
     String getValueByLabel(ChannelUID channelUID, String input) {
-        Optional<String> optionalValueByLabel = channelOptionsMap.get(channelUID).stream()
-                .filter(o -> input.equals(o.getLabel())).map(StateOption::getValue).findFirst();
+        List<StateOption> options = channelOptionsMap.get(channelUID);
+        if (options == null) {
+            return input;
+        }
 
         // if no match was found we assume that it already was a value and not a label
-        return Objects.requireNonNull(optionalValueByLabel.orElse(input));
+        return Objects.requireNonNull(options.stream().filter(o -> input.equals(o.getLabel()))
+                .map(StateOption::getValue).findFirst().orElse(input));
     }
 
     public void setFavorites(ChannelUID channelUID, List<BrowseResult> favorites) {
@@ -54,28 +70,21 @@ public class HeosDynamicStateDescriptionProvider extends BaseDynamicStateDescrip
         setBrowseResultList(channelUID, playLists, d -> d.containerId);
     }
 
-    private void setBrowseResultList(ChannelUID channelUID, List<BrowseResult> playlists,
+    private void setBrowseResultList(ChannelUID channelUID, List<BrowseResult> browseResults,
             Function<BrowseResult, @Nullable String> function) {
         setStateOptions(channelUID,
-                playlists.stream().filter(browseResult -> browseResult.playable == YesNoEnum.YES)
-                        .map(browseResult -> getStateOption(function, browseResult)).filter(Optional::isPresent)
-                        .map(Optional::get).collect(Collectors.toList()));
+                browseResults.stream().filter(browseResult -> browseResult.playable == YesNoEnum.YES)
+                        .flatMap(browseResult -> getStateOption(function, browseResult).stream()).toList());
     }
 
     private Optional<StateOption> getStateOption(Function<BrowseResult, @Nullable String> function,
             BrowseResult browseResult) {
-        @Nullable
-        String identifier = function.apply(browseResult);
-        if (identifier != null) {
-            return Optional.of(new StateOption(identifier, browseResult.name));
-        } else {
-            return Optional.empty();
-        }
+        return Optional.ofNullable(function.apply(browseResult))
+                .map(value -> new StateOption(value, browseResult.name));
     }
 
     public void setQueue(ChannelUID channelUID, List<Media> queue) {
         setStateOptions(channelUID,
-                queue.stream().map(m -> new StateOption(String.valueOf(m.queueId), m.combinedSongArtist()))
-                        .collect(Collectors.toList()));
+                queue.stream().map(m -> new StateOption(String.valueOf(m.queueId), m.combinedSongArtist())).toList());
     }
 }
