@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -36,7 +36,6 @@ import java.util.concurrent.Future;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
-import java.util.stream.Collectors;
 
 import javax.net.ssl.SSLHandshakeException;
 
@@ -827,7 +826,7 @@ public class HueBridge {
                 })//
                 .filter(scene -> !scene.isRecycle())//
                 .sorted(Comparator.comparing(Scene::extractKeyForComparator))//
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
