@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -31,6 +31,7 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -45,23 +46,33 @@ import org.openhab.binding.hue.internal.api.dto.clip2.Effects;
 import org.openhab.binding.hue.internal.api.dto.clip2.Gamut2;
 import org.openhab.binding.hue.internal.api.dto.clip2.MetaData;
 import org.openhab.binding.hue.internal.api.dto.clip2.MirekSchema;
+import org.openhab.binding.hue.internal.api.dto.clip2.PairXy;
 import org.openhab.binding.hue.internal.api.dto.clip2.ProductData;
 import org.openhab.binding.hue.internal.api.dto.clip2.Resource;
 import org.openhab.binding.hue.internal.api.dto.clip2.ResourceReference;
 import org.openhab.binding.hue.internal.api.dto.clip2.Resources;
+import org.openhab.binding.hue.internal.api.dto.clip2.Sound;
 import org.openhab.binding.hue.internal.api.dto.clip2.TimedEffects;
 import org.openhab.binding.hue.internal.api.dto.clip2.enums.ActionType;
 import org.openhab.binding.hue.internal.api.dto.clip2.enums.Archetype;
+import org.openhab.binding.hue.internal.api.dto.clip2.enums.ChimeType;
 import org.openhab.binding.hue.internal.api.dto.clip2.enums.ContentType;
 import org.openhab.binding.hue.internal.api.dto.clip2.enums.EffectType;
+import org.openhab.binding.hue.internal.api.dto.clip2.enums.ErrorType;
+import org.openhab.binding.hue.internal.api.dto.clip2.enums.MuteType;
 import org.openhab.binding.hue.internal.api.dto.clip2.enums.ResourceType;
 import org.openhab.binding.hue.internal.api.dto.clip2.enums.SceneRecallAction;
 import org.openhab.binding.hue.internal.api.dto.clip2.enums.SmartSceneRecallAction;
+import org.openhab.binding.hue.internal.api.dto.clip2.enums.SoundValue;
+import org.openhab.binding.hue.internal.api.dto.clip2.enums.UpdateStatusV2;
 import org.openhab.binding.hue.internal.api.dto.clip2.enums.ZigbeeStatus;
+import org.openhab.binding.hue.internal.api.dto.clip2.helper.LegacyLightState;
 import org.openhab.binding.hue.internal.api.dto.clip2.helper.Setters;
 import org.openhab.binding.hue.internal.config.Clip2ThingConfig;
 import org.openhab.binding.hue.internal.exceptions.ApiException;
 import org.openhab.binding.hue.internal.exceptions.AssetNotLoadedException;
+import org.openhab.binding.hue.internal.exceptions.CriticalFieldMissingException;
+import org.openhab.core.items.Item;
 import org.openhab.core.library.types.DateTimeType;
 import org.openhab.core.library.types.DecimalType;
 import org.openhab.core.library.types.HSBType;
@@ -81,6 +92,7 @@ import org.openhab.core.thing.Thing;
 import org.openhab.core.thing.ThingRegistry;
 import org.openhab.core.thing.ThingStatus;
 import org.openhab.core.thing.ThingStatusDetail;
+import org.openhab.core.thing.ThingStatusInfo;
 import org.openhab.core.thing.ThingTypeUID;
 import org.openhab.core.thing.ThingUID;
 import org.openhab.core.thing.binding.BaseThingHandler;
@@ -96,6 +108,8 @@ import org.openhab.core.types.RefreshType;
 import org.openhab.core.types.State;
 import org.openhab.core.types.StateOption;
 import org.openhab.core.types.UnDefType;
+import org.openhab.core.util.ColorUtil;
+import org.openhab.core.util.ColorUtil.Gamut;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -108,7 +122,7 @@ import org.slf4j.LoggerFactory;
 public class Clip2ThingHandler extends BaseThingHandler {
 
     public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_DEVICE, THING_TYPE_ROOM,
-            THING_TYPE_ZONE);
+            THING_TYPE_ZONE, THING_TYPE_AREA, THING_TYPE_SERVICE_GROUP);
 
     private static final Set<ResourceType> SUPPORTED_SCENE_TYPES = Set.of(ResourceType.SCENE, ResourceType.SMART_SCENE);
 
@@ -117,7 +131,27 @@ public class Clip2ThingHandler extends BaseThingHandler {
 
     private static final Duration DYNAMICS_ACTIVE_WINDOW = Duration.ofSeconds(10);
 
-    private static final String LK_WISER_DIMMER_MODEL_ID = "LK Dimmer";
+    /*
+     * Pre-compiled pattern matcher based on the following set of Model Id regular expressions for devices having
+     * the issue where they do not correctly handle a PUT command for the 'off' state.
+     */
+    private static final Set<String> OFF_TRANSITION_WORK_AROUND_MODELS = Set.of( //
+            "LK Dimmer", // LK Wiser Dimmer -- see https://techblog.vindvejr.dk/?p=455
+            "^TRADFRI.*1055l$" // IKEA Tradfri 1055l bulb
+    );
+    static final Pattern OFF_TRANSITION_WORK_AROUND_PATTERN = Pattern.compile(
+            OFF_TRANSITION_WORK_AROUND_MODELS.stream().collect(Collectors.joining("|")), Pattern.CASE_INSENSITIVE);
+
+    /*
+     * Pre-compiled pattern matcher based on the following set of Model Id regular expressions for devices having
+     * the (legacy) issue where the light operates bi-stable in either 'FULL_COLOR' or 'COLOR_TEMP' mode.
+     */
+    private static final Set<String> OPERATING_MODE_WORK_AROUND_MODELS = Set.of( //
+            "RGB-CCT", // Müller Licht extended color light
+            "TS0505B" // No Brand extended color light
+    );
+    private static final Pattern OPERATING_MODE_WORK_AROUND_PATTERN = Pattern.compile(
+            OPERATING_MODE_WORK_AROUND_MODELS.stream().collect(Collectors.joining("|")), Pattern.CASE_INSENSITIVE);
 
     private final Logger logger = LoggerFactory.getLogger(Clip2ThingHandler.class);
 
@@ -129,11 +163,15 @@ public class Clip2ThingHandler extends BaseThingHandler {
     private static final int FLAG_SCENE_ADD = 16;
     private static final int FLAG_SCENE_DELETE = 32;
 
+    // smart chime devices use write-only volume and duration channels, so these are their default values
+    private static final PercentType DEFAULT_SOUND_VOLUME = new PercentType(50);
+    private static final QuantityType<?> DEFAULT_ALARM_DURATION = QuantityType.valueOf(3, Units.SECOND);
+
     /**
      * A map of service Resources whose state contributes to the overall state of this thing. It is a map between the
      * resource ID (string) and a Resource object containing the last known state. e.g. a DEVICE thing may support a
      * LIGHT service whose Resource contributes to its overall state, or a ROOM or ZONE thing may support a
-     * GROUPED_LIGHT service whose Resource contributes to the its overall state.
+     * GROUPED_LIGHT service whose Resource contributes to its overall state.
      */
     private final Map<String, Resource> serviceContributorsCache = new ConcurrentHashMap<>();
 
@@ -143,6 +181,17 @@ public class Clip2ThingHandler extends BaseThingHandler {
      * to the respective LIGHT resource ID.
      */
     private final Map<ResourceType, String> commandResourceIds = new ConcurrentHashMap<>();
+
+    /**
+     * In the Hue API some resource types extend other base types (e.g. ResourceType.CAMERA_MOTION extends the
+     * ResourceType.MOTION base type). An extended resource type contains the same basic JSON fields as the base
+     * type plus a few extra application specific fields. So when reading data from an incoming extension resource
+     * we can safely "down map" its information to respective OH channels as if the data came from the base type.
+     * So e.g. the data from a ResourceType.CAMERA_MOTION resource can update the CHANNEL_2_MOTION channel state.
+     * By contrast when sending OH Channel commands we must "up map" the base information to the full extended
+     * resource type. This is a map between such base resource types and respective extended resource types.
+     */
+    private final Map<ResourceType, ResourceType> extendedResourceTypes = new ConcurrentHashMap<>();
 
     /**
      * Button devices contain one or more physical buttons, each of which is represented by a BUTTON Resource with its
@@ -191,9 +240,11 @@ public class Clip2ThingHandler extends BaseThingHandler {
     private boolean hasConnectivityIssue;
     private boolean updateSceneContributorsDone;
     private boolean updateLightPropertiesDone;
+    private boolean updateLightCacheRequiredFieldsDone;
     private boolean updatePropertiesDone;
     private boolean updateDependenciesDone;
-    private boolean applyOffTransitionWorkaround;
+
+    private @Nullable LegacyLightState legacyLightState;
 
     private @Nullable Future<?> alertResetTask;
     private @Nullable Future<?> dynamicsResetTask;
@@ -211,6 +262,10 @@ public class Clip2ThingHandler extends BaseThingHandler {
             thisResource = new Resource(ResourceType.ROOM);
         } else if (THING_TYPE_ZONE.equals(thingTypeUID)) {
             thisResource = new Resource(ResourceType.ZONE);
+        } else if (THING_TYPE_SERVICE_GROUP.equals(thingTypeUID)) {
+            thisResource = new Resource(ResourceType.SERVICE_GROUP);
+        } else if (THING_TYPE_AREA.equals(thingTypeUID)) {
+            thisResource = new Resource(ResourceType.MOTION_AREA_CONFIGURATION);
         } else {
             throw new IllegalArgumentException("Wrong thing type " + thingTypeUID.getAsString());
         }
@@ -229,8 +284,19 @@ public class Clip2ThingHandler extends BaseThingHandler {
     private void addSupportedChannel(String channelId) {
         if (!disposing && !updateDependenciesDone) {
             synchronized (supportedChannelIdSet) {
-                logger.debug("{} -> addSupportedChannel() '{}' added to supported channel set", resourceId, channelId);
-                supportedChannelIdSet.add(channelId);
+                if (supportedChannelIdSet.add(channelId)) {
+                    logger.debug("{} -> addSupportedChannel() '{}' added to supported channel set", resourceId,
+                            channelId);
+                    switch (channelId) { // set speaker write only channel default values
+                        case CHANNEL_2_VOLUME:
+                            updateState(channelId, DEFAULT_SOUND_VOLUME);
+                            break;
+                        case CHANNEL_2_DURATION:
+                            updateState(channelId, DEFAULT_ALARM_DURATION);
+                            break;
+                        default:
+                    }
+                }
                 if (DYNAMIC_CHANNELS.contains(channelId)) {
                     clearDynamicsChannel();
                 }
@@ -278,6 +344,7 @@ public class Clip2ThingHandler extends BaseThingHandler {
         commandResourceIds.clear();
         serviceContributorsCache.clear();
         controlIds.clear();
+        extendedResourceTypes.clear();
     }
 
     /**
@@ -288,9 +355,9 @@ public class Clip2ThingHandler extends BaseThingHandler {
     private Clip2BridgeHandler getBridgeHandler() throws AssetNotLoadedException {
         Bridge bridge = getBridge();
         if (Objects.nonNull(bridge)) {
-            BridgeHandler handler = bridge.getHandler();
-            if (handler instanceof Clip2BridgeHandler) {
-                return (Clip2BridgeHandler) handler;
+            BridgeHandler bridgeHandler = bridge.getHandler();
+            if (bridgeHandler instanceof Clip2BridgeHandler clip2BridgeHandler) {
+                return clip2BridgeHandler;
             }
         }
         throw new AssetNotLoadedException("Bridge handler missing");
@@ -345,6 +412,15 @@ public class Clip2ThingHandler extends BaseThingHandler {
             return;
         }
 
+        try {
+            handleCommandInner(channelUID, commandParam);
+        } catch (CriticalFieldMissingException e) {
+            logger.warn("{} -> handleCommand() channelUID:{} command:{} error: {}", resourceId, channelUID,
+                    commandParam, e.getMessage(), e);
+        }
+    }
+
+    public void handleCommandInner(ChannelUID channelUID, Command commandParam) throws CriticalFieldMissingException {
         ResourceType lightResourceType = thisResource.getType() == ResourceType.DEVICE ? ResourceType.LIGHT
                 : ResourceType.GROUPED_LIGHT;
 
@@ -353,6 +429,9 @@ public class Clip2ThingHandler extends BaseThingHandler {
         Command command = commandParam;
         String channelId = channelUID.getId();
         Resource cache = getCachedResource(lightResourceType);
+
+        ChimeType chimeType = null;
+        QuantityType<?> alarmDuration = null;
 
         switch (channelId) {
             case CHANNEL_2_ALERT:
@@ -383,10 +462,9 @@ public class Clip2ThingHandler extends BaseThingHandler {
 
             case CHANNEL_2_COLOR:
                 putResource = new Resource(lightResourceType);
-                if (command instanceof HSBType) {
-                    HSBType color = ((HSBType) command);
-                    putResource = Setters.setColorXy(putResource, color, cache);
-                    command = color.getBrightness();
+                if (command instanceof HSBType colorCommand) {
+                    putResource = Setters.setColorXy(putResource, colorCommand, cache);
+                    command = colorCommand.getBrightness();
                 }
                 // NB fall through for handling of brightness and switch related commands !!
 
@@ -395,19 +473,18 @@ public class Clip2ThingHandler extends BaseThingHandler {
                 if (command instanceof IncreaseDecreaseType increaseDecreaseCommand && Objects.nonNull(cache)) {
                     command = translateIncreaseDecreaseCommand(increaseDecreaseCommand, cache.getBrightnessState());
                 }
-                if (command instanceof PercentType) {
-                    PercentType brightness = (PercentType) command;
-                    putResource = Setters.setDimming(putResource, brightness, cache);
-                    Double minDimLevel = Objects.nonNull(cache) ? cache.getMinimumDimmingLevel() : null;
-                    minDimLevel = Objects.nonNull(minDimLevel) ? minDimLevel : Dimming.DEFAULT_MINIMUM_DIMMIMG_LEVEL;
-                    command = OnOffType.from(brightness.doubleValue() >= minDimLevel);
+                if (command instanceof PercentType brightnessCommand) {
+                    putResource = putResource.setBrightness(brightnessCommand);
+                    double brightnessAbsolute = brightnessCommand.doubleValue();
+                    command = Setters.getHardOnOff(putResource, brightnessAbsolute, true, cache); // avoid "soft off"
                 }
                 // NB fall through for handling of switch related commands !!
 
             case CHANNEL_2_SWITCH:
                 putResource = Objects.nonNull(putResource) ? putResource : new Resource(lightResourceType);
                 putResource.setOnOff(command);
-                applyDeviceSpecificWorkArounds(command, putResource);
+                applyOffTransitionWorkAround(command, putResource);
+                applyColorTemperatureWorkAround(command, putResource);
                 break;
 
             case CHANNEL_2_COLOR_XY_ONLY:
@@ -415,12 +492,12 @@ public class Clip2ThingHandler extends BaseThingHandler {
                 break;
 
             case CHANNEL_2_DIMMING_ONLY:
-                putResource = Setters.setDimming(new Resource(lightResourceType), command, cache);
+                putResource = new Resource(lightResourceType).setBrightness(command);
                 break;
 
             case CHANNEL_2_ON_OFF_ONLY:
                 putResource = new Resource(lightResourceType).setOnOff(command);
-                applyDeviceSpecificWorkArounds(command, putResource);
+                applyOffTransitionWorkAround(command, putResource);
                 break;
 
             case CHANNEL_2_TEMPERATURE_ENABLED:
@@ -428,11 +505,17 @@ public class Clip2ThingHandler extends BaseThingHandler {
                 break;
 
             case CHANNEL_2_MOTION_ENABLED:
-                putResource = new Resource(ResourceType.MOTION).setEnabled(command);
+                ResourceType motionType = thisResource.getType() == ResourceType.DEVICE //
+                        ? getExtendedResourceType(ResourceType.MOTION)
+                        : ResourceType.GROUPED_MOTION;
+                putResource = new Resource(motionType).setEnabled(command);
                 break;
 
             case CHANNEL_2_LIGHT_LEVEL_ENABLED:
-                putResource = new Resource(ResourceType.LIGHT_LEVEL).setEnabled(command);
+                ResourceType lightLevelType = thisResource.getType() == ResourceType.DEVICE //
+                        ? ResourceType.LIGHT_LEVEL
+                        : ResourceType.GROUPED_LIGHT_LEVEL;
+                putResource = new Resource(lightLevelType).setEnabled(command);
                 break;
 
             case CHANNEL_2_SECURITY_CONTACT_ENABLED:
@@ -440,8 +523,8 @@ public class Clip2ThingHandler extends BaseThingHandler {
                 break;
 
             case CHANNEL_2_SCENE:
-                if (command instanceof StringType) {
-                    Resource scene = sceneResourceEntries.get(((StringType) command).toString());
+                if (command instanceof StringType stringCommand) {
+                    Resource scene = sceneResourceEntries.get(stringCommand.toString());
                     if (Objects.nonNull(scene)) {
                         ResourceType putResourceType = scene.getType();
                         putResource = new Resource(putResourceType);
@@ -462,10 +545,46 @@ public class Clip2ThingHandler extends BaseThingHandler {
                 }
                 break;
 
+            case CHANNEL_2_ALARM_SOUND:
+                chimeType = ChimeType.ALARM;
+                alarmDuration = thing.getChannel(CHANNEL_2_DURATION) instanceof Channel channel2
+                        && getItemState(channel2.getUID(), QuantityType.class) instanceof QuantityType<?> quantity
+                                ? quantity
+                                : DEFAULT_ALARM_DURATION;
+                // fall through
+
+            case CHANNEL_2_ALERT_SOUND:
+                chimeType = chimeType != null ? chimeType : ChimeType.ALERT;
+                // fall through
+
+            case CHANNEL_2_CHIME_SOUND:
+                if (command instanceof StringType stringCommand) {
+                    chimeType = chimeType != null ? chimeType : ChimeType.CHIME;
+                    SoundValue soundValue = SoundValue.of(stringCommand.toString());
+                    PercentType soundVolume = thing.getChannel(CHANNEL_2_VOLUME) instanceof Channel chan
+                            && getItemState(chan.getUID(), PercentType.class) instanceof PercentType level ? level
+                                    : DEFAULT_SOUND_VOLUME;
+                    putResource = new Resource(ResourceType.SPEAKER).setSound(chimeType, soundValue, soundVolume,
+                            alarmDuration);
+                }
+                break;
+
+            case CHANNEL_2_MUTE:
+                if (command instanceof OnOffType onOff) {
+                    putResource = new Resource(ResourceType.SPEAKER)
+                            .setMuteType(MuteType.of(OnOffType.ON.equals(onOff)));
+                }
+                break;
+
+            case CHANNEL_2_MOTION_AREA_ENABLED:
+                putResource = new Resource(ResourceType.MOTION_AREA_CONFIGURATION).setEnabled(command);
+                putResourceId = thisResource.getId();
+                break;
+
             case CHANNEL_2_DYNAMICS:
                 Duration clearAfter = Duration.ZERO;
-                if (command instanceof QuantityType<?>) {
-                    QuantityType<?> durationMs = ((QuantityType<?>) command).toUnit(MetricPrefix.MILLI(Units.SECOND));
+                if (command instanceof QuantityType<?> quantityCommand) {
+                    QuantityType<?> durationMs = quantityCommand.toUnit(MetricPrefix.MILLI(Units.SECOND));
                     if (Objects.nonNull(durationMs) && durationMs.longValue() > 0) {
                         Duration duration = Duration.ofMillis(durationMs.longValue());
                         dynamicsDuration = duration;
@@ -531,8 +650,13 @@ public class Clip2ThingHandler extends BaseThingHandler {
         try {
             Resources resources = getBridgeHandler().putResource(putResource);
             if (resources.hasErrors()) {
-                logger.info("Command '{}' for thing '{}', channel '{}' succeeded with errors: {}", command,
-                        thing.getUID(), channelUID, String.join("; ", resources.getErrors()));
+                logger.debug("{} command '{}' for channel '{}' succeeded with error(s): {}", resourceId, command,
+                        channelUID,
+                        resources.getErrors().stream().map(e -> e.getDescription()).collect(Collectors.joining("; ")));
+                if (resources.getErrors().stream()
+                        .allMatch(e -> ErrorType.ATTRIBUTE_MAY_HAVE_NO_EFFECT == e.getErrorType())) {
+                    loopBackNotify(putResource);
+                }
             }
         } catch (ApiException | AssetNotLoadedException e) {
             if (logger.isDebugEnabled()) {
@@ -542,7 +666,59 @@ public class Clip2ThingHandler extends BaseThingHandler {
                         thing.getUID(), channelUID, e.getMessage());
             }
         } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
         }
+    }
+
+    /*
+     * Many channels have 'autoUpdatePolicy == veto' since we normally expect the bridge to immediately send a
+     * state update event after a PUT command. However if the bridge returned a "succeeded with error" message
+     * (HTTP status code 207) then, depending on the manufacturer, it may not send a state update, so we send
+     * ourself a mock event via loop-back in order to update the channel faster. We also add ColorTemperature
+     * or ColorXy DTO fields for commands to the counterpart channel in order to synch both channel sets.
+     */
+    private void loopBackNotify(Resource resource) {
+        scheduler.submit(() -> {
+            logger.debug("{} -> loopBackNotify() with resource {}", resourceId, resource);
+
+            // add DTO fields to synch ColorXy and ColorTemperature for commands to the counterpart channel
+            if (ResourceType.LIGHT == resource.getType()) {
+                ColorXy colorXy = resource.getColorXy();
+                ColorTemperature colorTemp = resource.getColorTemperature();
+
+                // ColorXy: add a ColorTemperature field with null (i.e. unknown) mirek value
+                if (colorXy != null && colorTemp == null && thing.getChannel(CHANNEL_2_COLOR_TEMP_PERCENT) != null) {
+                    resource.setColorTemperature(new ColorTemperature().setMirek(null));
+                }
+
+                // ColorTemperature: add a ColorXy field with the XY of the ColorTemperature on the Planckian locus
+                if (colorTemp != null && colorXy == null && thing.getChannel(CHANNEL_2_COLOR) != null
+                        && colorTemp.getMirek() instanceof Long mirek) {
+                    resource.setColorXy(new ColorXy().setXY(ColorUtil.kelvinToXY(1000000.0 / mirek)));
+                }
+            }
+
+            onResource(resource.setContentType(ContentType.UPDATE));
+        });
+    }
+
+    /**
+     * Get the state of the first linked item of the given type for the given channel UID.
+     *
+     * @param channelUID the channel UID.
+     * @param type the expected state type.
+     * @return the state, or null if not found.
+     */
+    private <T extends State> @Nullable T getItemState(ChannelUID channelUID, Class<T> type) {
+        return itemChannelLinkRegistry.getLinkedItems(channelUID).stream().map(Item::getState).filter(type::isInstance)
+                .map(type::cast).findFirst().orElse(null);
+    }
+
+    /**
+     * Returns the extended resource type, or base type if none available.
+     */
+    private ResourceType getExtendedResourceType(ResourceType baseType) {
+        return extendedResourceTypes.get(baseType) instanceof ResourceType extendedType ? extendedType : baseType;
     }
 
     private Command translateIncreaseDecreaseCommand(IncreaseDecreaseType command, State currentValue) {
@@ -566,19 +742,48 @@ public class Clip2ThingHandler extends BaseThingHandler {
             } catch (ApiException | AssetNotLoadedException e) {
                 logger.debug("{} -> handleCommand() error {}", resourceId, e.getMessage(), e);
             } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
             }
         }, 3, TimeUnit.SECONDS);
     }
 
     /**
-     * Apply device specific work-arounds needed for given command.
+     * Apply the off transition work-around for the given command to the given resource.
      *
      * @param command the handled command.
      * @param putResource the resource that will be adjusted if needed.
      */
-    private void applyDeviceSpecificWorkArounds(Command command, Resource putResource) {
-        if (command == OnOffType.OFF && applyOffTransitionWorkaround) {
-            putResource.setDynamicsDuration(dynamicsDuration);
+    private void applyOffTransitionWorkAround(Command command, Resource putResource) {
+        try {
+            if (command == OnOffType.OFF && getBridgeHandler().requiresOffTransitionWorkAround(resourceId)) {
+                putResource.setDynamicsDuration(dynamicsDuration);
+                logger.debug("{} -> applyOffTransitionWorkAround() command={} dynamics.duration={}", resourceId,
+                        command, dynamicsDuration);
+            }
+        } catch (AssetNotLoadedException e) {
+            logger.debug("{} -> applyOffTransitionWorkAround() error {}", resourceId, e.getMessage(), e);
+        }
+    }
+
+    /**
+     * Some legacy lights have a bi-stable operating mode which makes them forget color temperature
+     * commands when they are in soft-off state. This method re-applies the lost color temperature.
+     *
+     * @param command the handled command.
+     * @param putResource the resource that will be adjusted if needed.
+     */
+    private void applyColorTemperatureWorkAround(Command command, Resource putResource) {
+        LegacyLightState legacyState = legacyLightState;
+        if (legacyState == null || legacyState.getMode() != LegacyLightState.Mode.COLOR_TEMP) {
+            return;
+        }
+        if (command != OnOffType.ON || putResource.getColorXy() != null || putResource.getColorTemperature() != null) {
+            return;
+        }
+        Long mirek = legacyState.getMirek();
+        if (mirek != null) {
+            putResource.setColorTemperature(new ColorTemperature().setMirek(mirek));
+            logger.debug("{} -> applyColorTemperatureWorkAround() mirek={}", resourceId, mirek);
         }
     }
 
@@ -630,13 +835,15 @@ public class Clip2ThingHandler extends BaseThingHandler {
         updatePropertiesDone = false;
         updateDependenciesDone = false;
         updateLightPropertiesDone = false;
+        updateLightCacheRequiredFieldsDone = false;
         updateSceneContributorsDone = false;
+        legacyLightState = null;
 
         Bridge bridge = getBridge();
         if (Objects.nonNull(bridge)) {
             BridgeHandler bridgeHandler = bridge.getHandler();
-            if (bridgeHandler instanceof Clip2BridgeHandler) {
-                ((Clip2BridgeHandler) bridgeHandler).childInitialized();
+            if (bridgeHandler instanceof Clip2BridgeHandler clip2BridgeHandler) {
+                clip2BridgeHandler.childInitialized();
             }
         }
     }
@@ -688,6 +895,9 @@ public class Clip2ThingHandler extends BaseThingHandler {
                     resourceConsumedFlags = updatePropertiesDone ? FLAG_PROPERTIES_UPDATE : 0;
                 }
             }
+            if (resource.getType() == ResourceType.MOTION_AREA_CONFIGURATION) {
+                resourceConsumedFlags |= updateChannels && updateChannels(resource) ? FLAG_CHANNELS_UPDATE : 0;
+            }
             if (!updateDependenciesDone) {
                 resourceConsumedFlags |= FLAG_DEPENDENCIES_UPDATE;
                 cancelTask(updateDependenciesTask, false);
@@ -703,8 +913,11 @@ public class Clip2ThingHandler extends BaseThingHandler {
                 resourceConsumedFlags |= FLAG_CACHE_UPDATE;
                 resourceConsumedFlags |= updateChannels && updateChannels(resource) ? FLAG_CHANNELS_UPDATE : 0;
                 putResourceToCache(resource);
-                if (ResourceType.LIGHT == resource.getType() && !updateLightPropertiesDone) {
-                    updateLightProperties(resource);
+                switch (resource.getType()) {
+                    case DEVICE_SOFTWARE_UPDATE:
+                        refreshSoftwareStatusUI(resource);
+                        break;
+                    default:
                 }
             }
         }
@@ -790,7 +1003,7 @@ public class Clip2ThingHandler extends BaseThingHandler {
         Alerts alerts = resource.getAlerts();
         if (Objects.nonNull(alerts)) {
             List<StateOption> stateOptions = alerts.getActionValues().stream().map(action -> action.name())
-                    .map(actionId -> new StateOption(actionId, actionId)).collect(Collectors.toList());
+                    .map(actionId -> new StateOption(actionId, actionId)).toList();
             if (!stateOptions.isEmpty()) {
                 stateDescriptionProvider.setStateOptions(new ChannelUID(thing.getUID(), CHANNEL_2_ALERT), stateOptions);
                 logger.debug("{} -> updateAlerts() found {} associated alerts", resourceId, stateOptions.size());
@@ -874,9 +1087,9 @@ public class Clip2ThingHandler extends BaseThingHandler {
 
                 /*
                  * This binding creates its dynamic list of channels by a 'subtractive' method i.e. the full set of
-                 * channels is initially created from the thing type xml, and then for any channels where UndfType.NULL
+                 * channels is initially created from the thing type xml, and then for any channels where UndefType.NULL
                  * data is returned, the respective channel is removed from the full list. However in seldom cases
-                 * UndfType.NULL may wrongly be returned, so we should log a warning here just in case.
+                 * UndefType.NULL may wrongly be returned, so we should log a warning here just in case.
                  */
                 if (logger.isDebugEnabled()) {
                     supportedChannelIdSet.stream().filter(channelId -> Objects.isNull(thing.getChannel(channelId)))
@@ -891,8 +1104,7 @@ public class Clip2ThingHandler extends BaseThingHandler {
 
                 // get list of unused channels
                 List<Channel> unusedChannels = thing.getChannels().stream()
-                        .filter(channel -> !supportedChannelIdSet.contains(channel.getUID().getId()))
-                        .collect(Collectors.toList());
+                        .filter(channel -> !supportedChannelIdSet.contains(channel.getUID().getId())).toList();
 
                 // remove any unused channels
                 if (!unusedChannels.isEmpty()) {
@@ -914,10 +1126,26 @@ public class Clip2ThingHandler extends BaseThingHandler {
      * @param resource the Resource containing the new channel state.
      * @return true if the channel was found and updated.
      */
-    private boolean updateChannels(Resource resource) {
+    boolean updateChannels(Resource resource) {
+        try {
+            return updateChannelsInner(resource);
+        } catch (CriticalFieldMissingException e) {
+            // this should never happen but log it just in case
+            logger.warn("{} -> updateChannels() error {}", resourceId, e.getMessage(), e);
+            return false;
+        }
+    }
+
+    private boolean updateChannelsInner(Resource resource) throws CriticalFieldMissingException {
         logger.debug("{} -> updateChannels() from resource {}", resourceId, resource);
         boolean fullUpdate = resource.hasFullState();
         switch (resource.getType()) {
+            case BELL_BUTTON:
+                if (fullUpdate) {
+                    extendedResourceTypes.put(ResourceType.BUTTON, resource.getType());
+                }
+                // fall through for button related channels
+
             case BUTTON:
                 if (fullUpdate) {
                     addSupportedChannel(CHANNEL_2_BUTTON_LAST_EVENT);
@@ -929,8 +1157,8 @@ public class Clip2ThingHandler extends BaseThingHandler {
                 }
                 // Update channel from timestamp if last button pressed.
                 State buttonLastUpdatedState = resource.getButtonLastUpdatedState();
-                if (buttonLastUpdatedState instanceof DateTimeType) {
-                    Instant buttonLastUpdatedInstant = ((DateTimeType) buttonLastUpdatedState).getInstant();
+                if (buttonLastUpdatedState instanceof DateTimeType dateTimeState) {
+                    Instant buttonLastUpdatedInstant = dateTimeState.getInstant();
                     if (buttonLastUpdatedInstant.isAfter(buttonGroupLastUpdated)) {
                         updateState(CHANNEL_2_BUTTON_LAST_UPDATED, buttonLastUpdatedState, fullUpdate);
                         buttonGroupLastUpdated = buttonLastUpdatedInstant;
@@ -946,36 +1174,92 @@ public class Clip2ThingHandler extends BaseThingHandler {
                 break;
 
             case LIGHT:
+                ColorXy color = resource.getColorXy();
+                ColorTemperature colorTemp = resource.getColorTemperature();
+                LegacyLightState legacyState = legacyLightState;
+                PairXy legacyColor = (legacyState != null && colorTemp != null && color != null) ? color.getXY() : null;
+
                 if (fullUpdate) {
+                    updateLightProperties(resource);
+                    updateLightCacheRequiredFields(resource);
                     updateEffectChannel(resource);
                     updateColorTemperatureAbsoluteChannel(resource);
+                    if (legacyState != null && legacyColor != null && colorTemp != null) {
+                        legacyState.setParameters(legacyColor, colorTemp.getMirek());
+                        logger.debug("{} -> updateChannels() initialised operating mode work-around legacy state {}",
+                                resourceId, legacyState);
+                    }
                 }
-                updateState(CHANNEL_2_COLOR_TEMP_PERCENT, resource.getColorTemperaturePercentState(), fullUpdate);
-                updateState(CHANNEL_2_COLOR_TEMP_ABSOLUTE, resource.getColorTemperatureAbsoluteState(), fullUpdate);
-                updateState(CHANNEL_2_COLOR, resource.getColorState(), fullUpdate);
-                updateState(CHANNEL_2_COLOR_XY_ONLY, resource.getColorXyState(), fullUpdate);
+
+                State colorState = resource.getColorState();
+                State colorXyState = resource.getColorXyState();
+                State colorTempState = resource.getColorTemperaturePercentState();
+                State colorTempAbsState = resource.getColorTemperatureAbsoluteState();
+
+                if (legacyState != null && legacyColor != null && colorTemp != null && color != null) {
+                    State colorPrior = colorState;
+                    State colorTempPrior = colorTempState;
+                    legacyState.setParameters(legacyColor, colorTemp.getMirek());
+                    color.setXY(legacyState.getXY());
+                    colorTemp.setMirek(legacyState.getMirek());
+                    colorState = resource.getColorState();
+                    colorXyState = resource.getColorXyState();
+                    colorTempState = resource.getColorTemperaturePercentState();
+                    colorTempAbsState = resource.getColorTemperatureAbsoluteState();
+                    logger.debug(
+                            "{} -> updateChannels() operating mode work-around legacy state '{}' transformed [{}]->[{}] and {}->{}",
+                            resourceId, legacyState, colorPrior, colorState, colorTempPrior, colorTempState);
+                }
+
+                updateState(CHANNEL_2_COLOR, colorState, fullUpdate);
+                updateState(CHANNEL_2_COLOR_XY_ONLY, colorXyState, fullUpdate);
+                updateState(CHANNEL_2_COLOR_TEMP_PERCENT, colorTempState, fullUpdate);
+                updateState(CHANNEL_2_COLOR_TEMP_ABSOLUTE, colorTempAbsState, fullUpdate);
                 updateState(CHANNEL_2_EFFECT, resource.getEffectState(), fullUpdate);
                 // fall through for dimming and on/off related channels
 
             case GROUPED_LIGHT:
                 if (fullUpdate) {
                     updateAlertChannel(resource);
+                    updateLightCacheRequiredFields(resource);
                 }
                 updateState(CHANNEL_2_BRIGHTNESS, resource.getBrightnessState(), fullUpdate);
                 updateState(CHANNEL_2_DIMMING_ONLY, resource.getDimmingState(), fullUpdate);
-                updateState(CHANNEL_2_SWITCH, resource.getOnOffState(), fullUpdate);
+                updateState(CHANNEL_2_SWITCH, resource.getSwitchState(), fullUpdate);
                 updateState(CHANNEL_2_ON_OFF_ONLY, resource.getOnOffState(), fullUpdate);
                 updateState(CHANNEL_2_ALERT, resource.getAlertState(), fullUpdate);
                 break;
 
+            case GROUPED_LIGHT_LEVEL:
             case LIGHT_LEVEL:
                 updateState(CHANNEL_2_LIGHT_LEVEL, resource.getLightLevelState(), fullUpdate);
                 updateState(CHANNEL_2_LIGHT_LEVEL_LAST_UPDATED, resource.getLightLevelLastUpdatedState(), fullUpdate);
                 updateState(CHANNEL_2_LIGHT_LEVEL_ENABLED, resource.getEnabledState(), fullUpdate);
                 break;
 
-            case MOTION:
             case CAMERA_MOTION:
+                if (fullUpdate) {
+                    extendedResourceTypes.put(ResourceType.MOTION, resource.getType());
+                }
+                updateState(CHANNEL_2_MOTION, resource.getMotionState(), fullUpdate);
+                updateState(CHANNEL_2_MOTION_LAST_UPDATED, resource.getMotionLastUpdatedState(), fullUpdate);
+                updateState(CHANNEL_2_MOTION_ENABLED, resource.getEnabledState(), fullUpdate);
+                break;
+
+            case CONVENIENCE_AREA_MOTION:
+                if (fullUpdate) {
+                    extendedResourceTypes.put(ResourceType.MOTION, resource.getType());
+                }
+                updateState(CHANNEL_2_MOTION, resource.getMotionState(), fullUpdate);
+                updateState(CHANNEL_2_MOTION_LAST_UPDATED, resource.getMotionLastUpdatedState(), fullUpdate);
+                break;
+
+            case MOTION_AREA_CONFIGURATION:
+                updateState(CHANNEL_2_MOTION_AREA_ENABLED, resource.getEnabledState(), fullUpdate);
+                break;
+
+            case GROUPED_MOTION:
+            case MOTION:
                 updateState(CHANNEL_2_MOTION, resource.getMotionState(), fullUpdate);
                 updateState(CHANNEL_2_MOTION_LAST_UPDATED, resource.getMotionLastUpdatedState(), fullUpdate);
                 updateState(CHANNEL_2_MOTION_ENABLED, resource.getEnabledState(), fullUpdate);
@@ -991,12 +1275,18 @@ public class Clip2ThingHandler extends BaseThingHandler {
                 updateState(CHANNEL_2_ROTARY_STEPS_LAST_UPDATED, resource.getRotaryStepsLastUpdatedState(), fullUpdate);
                 break;
 
+            case SECURITY_AREA_MOTION:
+                updateState(CHANNEL_2_SECURITY_MOTION, resource.getMotionState(), fullUpdate);
+                updateState(CHANNEL_2_SECURITY_MOTION_LAST_UPDATED, resource.getMotionLastUpdatedState(), fullUpdate);
+                break;
+
             case TEMPERATURE:
                 updateState(CHANNEL_2_TEMPERATURE, resource.getTemperatureState(), fullUpdate);
                 updateState(CHANNEL_2_TEMPERATURE_LAST_UPDATED, resource.getTemperatureLastUpdatedState(), fullUpdate);
                 updateState(CHANNEL_2_TEMPERATURE_ENABLED, resource.getEnabledState(), fullUpdate);
                 break;
 
+            case ZGP_CONNECTIVITY:
             case ZIGBEE_CONNECTIVITY:
                 updateConnectivityState(resource);
                 break;
@@ -1020,9 +1310,22 @@ public class Clip2ThingHandler extends BaseThingHandler {
                 updateState(CHANNEL_2_SCENE, resource.getSmartSceneState(), fullUpdate);
                 break;
 
+            case SPEAKER:
+                if (fullUpdate) {
+                    addSupportedChannel(CHANNEL_2_VOLUME);
+                    addSupportedChannel(CHANNEL_2_DURATION);
+                    updateSoundChannelOptions(resource);
+                }
+                updateState(CHANNEL_2_ALARM_SOUND, resource.getSoundState(ChimeType.ALARM), fullUpdate);
+                updateState(CHANNEL_2_ALERT_SOUND, resource.getSoundState(ChimeType.ALERT), fullUpdate);
+                updateState(CHANNEL_2_CHIME_SOUND, resource.getSoundState(ChimeType.CHIME), fullUpdate);
+                updateState(CHANNEL_2_MUTE, resource.getSoundMuteState(), fullUpdate);
+                break;
+
             default:
                 return false;
         }
+
         if (thisResource.getType() == ResourceType.DEVICE) {
             updateState(CHANNEL_2_LAST_UPDATED, new DateTimeType(), fullUpdate);
         }
@@ -1043,12 +1346,28 @@ public class Clip2ThingHandler extends BaseThingHandler {
                     thing.getStatus(), zigbeeStatus);
             hasConnectivityIssue = zigbeeStatus.isConnectivityIssue();
             if (hasConnectivityIssue) {
-                if (thing.getStatusInfo().getStatusDetail() != ThingStatusDetail.COMMUNICATION_ERROR) {
-                    updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.NONE,
-                            "@text/offline.api2.comm-error.zigbee-connectivity-issue");
+                // unknown values also parse to DISCONNECTED, so only a literal 'disconnected' gets its own text
+                String description = ZigbeeStatus.DISCONNECTED.name().equalsIgnoreCase(resource.getZigbeeStatusValue())
+                        ? TEXT_OFFLINE_ZIGBEE_DISCONNECTED
+                        : TEXT_OFFLINE_ZIGBEE_CONNECTIVITY_ISSUE;
+                // publish unless the thing already shows exactly this, so that a status set by anybody else heals
+                ThingStatusInfo statusInfo = thing.getStatusInfo();
+                if (statusInfo.getStatus() != ThingStatus.OFFLINE
+                        || statusInfo.getStatusDetail() != ThingStatusDetail.COMMUNICATION_ERROR
+                        || !description.equals(statusInfo.getDescription())) {
+                    updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR, description);
                     supportedChannelIdSet.forEach(channelId -> updateState(channelId, UnDefType.UNDEF));
                 }
-            } else if (thing.getStatus() != ThingStatus.ONLINE) {
+                return;
+            }
+            String fwState = thing.getProperties().get(PROPERTY_FIRMWARE_UPDATE_STATE);
+            if (UpdateStatusV2.INSTALLING.toString().equals(fwState)) {
+                // firmware update still in progress; remain OFFLINE(FIRMWARE_UPDATING)
+                updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.FIRMWARE_UPDATING);
+                return;
+            }
+            if (thing.getStatus() != ThingStatus.ONLINE) {
+                // the updateStatus() override below takes care of setting the status detail and description
                 updateStatus(ThingStatus.ONLINE);
                 refreshAllChannels();
             }
@@ -1088,6 +1407,7 @@ public class Clip2ThingHandler extends BaseThingHandler {
                 updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
                         "@text/offline.api2.conf-error.assets-not-loaded");
             } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
             }
         }
     }
@@ -1106,7 +1426,7 @@ public class Clip2ThingHandler extends BaseThingHandler {
                 .map(effect -> {
                     String effectName = EffectType.of(effect).name();
                     return new StateOption(effectName, effectName);
-                }).distinct().collect(Collectors.toList());
+                }).distinct().toList();
         if (!stateOptions.isEmpty()) {
             stateDescriptionProvider.setStateOptions(new ChannelUID(thing.getUID(), CHANNEL_2_EFFECT), stateOptions);
             logger.debug("{} -> updateEffects() found {} effects", resourceId, stateOptions.size());
@@ -1126,7 +1446,6 @@ public class Clip2ThingHandler extends BaseThingHandler {
             if (mirekSchema != null) {
                 stateDescriptionProvider.setMinMaxKelvin(new ChannelUID(thing.getUID(), CHANNEL_2_COLOR_TEMP_ABSOLUTE),
                         1000000 / mirekSchema.getMirekMaximum(), 1000000 / mirekSchema.getMirekMinimum());
-                logger.debug("{} -> updateColorTempAbsChannel() done", resource.getId());
             }
         }
     }
@@ -1137,7 +1456,7 @@ public class Clip2ThingHandler extends BaseThingHandler {
      * @param resource a Resource object containing the property data.
      */
     private synchronized void updateLightProperties(Resource resource) {
-        if (!disposing && !updateLightPropertiesDone) {
+        if (!disposing && !updateLightPropertiesDone && (ResourceType.LIGHT == resource.getType())) {
             logger.debug("{} -> updateLightProperties()", resourceId);
 
             Dimming dimming = resource.getDimming();
@@ -1184,59 +1503,49 @@ public class Clip2ThingHandler extends BaseThingHandler {
     private synchronized void updateProperties(Resource resource) {
         if (!disposing && !updatePropertiesDone) {
             logger.debug("{} -> updateProperties()", resourceId);
-            Map<String, String> properties = new HashMap<>(thing.getProperties());
+            Map<String, String> props = new HashMap<>(thing.getProperties());
 
             // resource data
-            properties.put(PROPERTY_RESOURCE_ID, resourceId);
-            properties.put(PROPERTY_RESOURCE_TYPE, thisResource.getType().toString());
-            properties.put(PROPERTY_RESOURCE_NAME, thisResource.getName());
+            Setters.putIfExists(props, PROPERTY_RESOURCE_ID, resourceId);
+            Setters.putIfExists(props, PROPERTY_RESOURCE_TYPE, thisResource.getTypeAsString());
+            Setters.putIfExists(props, PROPERTY_RESOURCE_NAME, thisResource.getName());
 
             // owner information
             ResourceReference owner = thisResource.getOwner();
             if (Objects.nonNull(owner)) {
-                String ownerId = owner.getId();
-                if (Objects.nonNull(ownerId)) {
-                    properties.put(PROPERTY_OWNER, ownerId);
-                }
-                ResourceType ownerType = owner.getType();
-                properties.put(PROPERTY_OWNER_TYPE, ownerType.toString());
+                Setters.putIfExists(props, PROPERTY_OWNER, owner.getId());
+                Setters.putIfExists(props, PROPERTY_OWNER_TYPE, owner.getTypeAsString());
             }
 
             // metadata
             MetaData metaData = thisResource.getMetaData();
             if (Objects.nonNull(metaData)) {
-                properties.put(PROPERTY_RESOURCE_ARCHETYPE, metaData.getArchetype().toString());
+                Setters.putIfExists(props, PROPERTY_RESOURCE_ARCHETYPE, metaData.getArchetypeAsString());
             }
 
             // product data
-            ProductData productData = thisResource.getProductData();
-            if (Objects.nonNull(productData)) {
-                String modelId = productData.getModelId();
+            ProductData prodData = thisResource.getProductData();
+            if (Objects.nonNull(prodData)) {
+                String modelId = prodData.getModelId();
 
                 // standard properties
-                properties.put(Thing.PROPERTY_MODEL_ID, modelId);
-                properties.put(Thing.PROPERTY_VENDOR, productData.getManufacturerName());
-                properties.put(Thing.PROPERTY_FIRMWARE_VERSION, productData.getSoftwareVersion());
-                String hardwarePlatformType = productData.getHardwarePlatformType();
-                if (Objects.nonNull(hardwarePlatformType)) {
-                    properties.put(Thing.PROPERTY_HARDWARE_VERSION, hardwarePlatformType);
-                }
+                Setters.putIfExists(props, Thing.PROPERTY_MODEL_ID, modelId);
+                Setters.putIfExists(props, Thing.PROPERTY_VENDOR, prodData.getManufacturerName());
+                Setters.putIfExists(props, Thing.PROPERTY_FIRMWARE_VERSION, prodData.getSoftwareVersion());
+                Setters.putIfExists(props, Thing.PROPERTY_HARDWARE_VERSION, prodData.getHardwarePlatformType());
 
                 // hue specific properties
-                properties.put(PROPERTY_PRODUCT_NAME, productData.getProductName());
-                properties.put(PROPERTY_PRODUCT_ARCHETYPE, productData.getProductArchetype().toString());
-                properties.put(PROPERTY_PRODUCT_CERTIFIED, productData.getCertified().toString());
+                Setters.putIfExists(props, PROPERTY_PRODUCT_NAME, prodData.getProductName());
+                Setters.putIfExists(props, PROPERTY_PRODUCT_ARCHETYPE, prodData.getProductArchetypeAsString());
+                Setters.putIfExists(props, PROPERTY_PRODUCT_CERTIFIED, prodData.getCertifiedAsString());
 
-                // Check device for needed work-arounds.
-                if (LK_WISER_DIMMER_MODEL_ID.equals(modelId)) {
-                    // Apply transition time as a workaround for LK Wiser Dimmer firmware bug.
-                    // Additional details here: https://techblog.vindvejr.dk/?p=455
-                    applyOffTransitionWorkaround = true;
-                    logger.debug("{} -> enabling work-around for turning off LK Wiser Dimmer", resourceId);
+                if (OPERATING_MODE_WORK_AROUND_PATTERN.matcher(modelId).matches()) {
+                    legacyLightState = new LegacyLightState();
+                    logger.debug("{} -> enabled operating mode work-around for {}", resourceId, modelId);
                 }
             }
 
-            thing.setProperties(properties);
+            thing.setProperties(props);
             updatePropertiesDone = true;
         }
     }
@@ -1263,7 +1572,7 @@ public class Clip2ThingHandler extends BaseThingHandler {
      */
     private void updateSceneChannelStateDescription() {
         stateDescriptionProvider.setStateOptions(new ChannelUID(thing.getUID(), CHANNEL_2_SCENE),
-                sceneResourceEntries.keySet().stream().map(n -> new StateOption(n, n)).collect(Collectors.toList()));
+                sceneResourceEntries.keySet().stream().map(n -> new StateOption(n, n)).toList());
     }
 
     /**
@@ -1348,6 +1657,27 @@ public class Clip2ThingHandler extends BaseThingHandler {
     }
 
     /**
+     * Process the incoming Resource to initialize the state options of sound channels. Determines the available sound
+     * values for each chime type and stores them as respective state options for that channel.
+     *
+     * @param resource a Resource possibly with Alarm, Alert, or Chime elements.
+     */
+    private void updateSoundChannelOptions(Resource resource) {
+        for (ChimeType chimeType : ChimeType.values()) {
+            if (resource.getSound(chimeType) instanceof Sound sound
+                    && sound.getSoundValues() instanceof List<SoundValue> soundValues && !soundValues.isEmpty()) {
+                String channelID = switch (chimeType) {
+                    case ALARM -> CHANNEL_2_ALARM_SOUND;
+                    case ALERT -> CHANNEL_2_ALERT_SOUND;
+                    case CHIME -> CHANNEL_2_CHIME_SOUND;
+                };
+                stateDescriptionProvider.setStateOptions(new ChannelUID(thing.getUID(), channelID),
+                        soundValues.stream().map(v -> new StateOption(v.name(), v.name())).toList());
+            }
+        }
+    }
+
+    /**
      * Update the channel state, and if appropriate add the channel ID to the set of supportedChannelIds. Calls either
      * OH core updateState() or triggerChannel() methods depending on the channel kind.
      *
@@ -1372,8 +1702,8 @@ public class Clip2ThingHandler extends BaseThingHandler {
                     break;
 
                 case TRIGGER:
-                    if (state instanceof DecimalType) {
-                        triggerChannel(channelID, String.valueOf(((DecimalType) state).intValue()));
+                    if (state instanceof DecimalType decimalState) {
+                        triggerChannel(channelID, String.valueOf(decimalState.intValue()));
                     }
             }
         }
@@ -1409,7 +1739,7 @@ public class Clip2ThingHandler extends BaseThingHandler {
                 legacyLinkedChannelUIDs.addAll(legacyThing.getChannels().stream().map(Channel::getUID)
                         .filter(uid -> REPLICATE_CHANNEL_ID_MAP.containsKey(uid.getId())
                                 && itemChannelLinkRegistry.isLinked(uid))
-                        .collect(Collectors.toList()));
+                        .toList());
 
                 Map<String, String> newProperties = new HashMap<>(properties);
                 newProperties.remove(PROPERTY_LEGACY_THING_UID);
@@ -1429,6 +1759,9 @@ public class Clip2ThingHandler extends BaseThingHandler {
             int sensorCount = 0;
             SemanticTag equipmentTag = null;
 
+            if (thing.getChannel(CHANNEL_2_CHIME_SOUND) != null) {
+                equipmentTag = Equipment.SPEAKER;
+            }
             if (Set.of(ResourceType.ROOM, ResourceType.ZONE).contains(thisResource.getType())) {
                 equipmentTag = Equipment.ZONE;
             }
@@ -1462,10 +1795,100 @@ public class Clip2ThingHandler extends BaseThingHandler {
             if (sensorCount > 1) {
                 equipmentTag = Equipment.SENSOR;
             }
+            if (thing.getChannel(CHANNEL_2_SECURITY_MOTION) != null) {
+                equipmentTag = Equipment.MOTION_DETECTOR;
+            }
             if (equipmentTag != null) {
                 logger.debug("{} -> updateEquipmentTag({})", resourceId, equipmentTag.getName());
                 updateThing(editThing().withSemanticEquipmentTag(equipmentTag).build());
             }
+        }
+    }
+
+    /**
+     * Read the update status of the thing from the given resource and update its property and status accordingly.
+     */
+    private void refreshSoftwareStatusUI(Resource resource) {
+        UpdateStatusV2 status = resource.getUpdateStatus();
+        if (status != null) {
+            thing.setProperty(PROPERTY_FIRMWARE_UPDATE_STATE, status.toString());
+            if (hasConnectivityIssue) {
+                return;
+            }
+            if (status == UpdateStatusV2.INSTALLING) {
+                updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.FIRMWARE_UPDATING);
+            } else {
+                // the updateStatus() override below takes care of setting the status detail and description
+                updateStatus(ThingStatus.ONLINE);
+            }
+        }
+    }
+
+    /**
+     * Override method: Updates the thing status based on the given status, status detail, and description. If the
+     * status is ONLINE and the firmware property indicates that an update is available, then the description is
+     * overridden with the respective update state's translatable text. If the status detail is FIRMWARE_UPDATING,
+     * then the description is overridden with the translatable 'installing update' text. In all other cases,
+     * the given status, status detail, and description are used unchanged.
+     */
+    @Override
+    protected void updateStatus(ThingStatus thingStatus, ThingStatusDetail detail, @Nullable String description) {
+        if (thingStatus == ThingStatus.ONLINE || detail == ThingStatusDetail.FIRMWARE_UPDATING) {
+            String firmware = thing.getProperties().get(PROPERTY_FIRMWARE_UPDATE_STATE);
+            UpdateStatusV2 status = UpdateStatusV2.reverseLookup(firmware);
+            if (status != null) {
+                switch (status) {
+                    case INSTALLING:
+                        super.updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.FIRMWARE_UPDATING, status.i18nKey());
+                        return;
+                    case READY_TO_INSTALL:
+                        super.updateStatus(ThingStatus.ONLINE, ThingStatusDetail.NONE, status.i18nKey());
+                        return;
+                    default:
+                }
+            }
+            // if there is no software update status preserve the caller-provided status information
+        }
+        super.updateStatus(thingStatus, detail, description);
+    }
+
+    /**
+     * Ensure that the light service resource in the serviceContributorsCache has a complete DTO for it to
+     * yield valid channel state values. Check if the given (cached) light service has a {@link MirekSchema}
+     * field, and a {@link Gamut} field. If any is missing, use the binding default values. This ensures that
+     * the light's channels always have a valid color temperature range, and gamut, to use.
+     */
+    private synchronized void updateLightCacheRequiredFields(Resource resource) {
+        ResourceType type = resource.getType();
+        if (!disposing && !updateLightCacheRequiredFieldsDone && LIGHT_TYPES.contains(type)) {
+            logger.debug("{} -> updateLightCacheRequiredFields()", resourceId);
+
+            if (resource.getColorTemperature() instanceof ColorTemperature ct) {
+                MirekSchema mirekSchema = ct.getMirekSchema();
+                if (mirekSchema == null) {
+                    ct.setMirekSchema(MirekSchema.DEFAULT_SCHEMA);
+                } else if (mirekSchema.invalid()) {
+                    logger.warn("{} -> light MirekSchema {} invalid -> using default", resourceId,
+                            mirekSchema.toPropertyValue());
+                    ct.setMirekSchema(MirekSchema.DEFAULT_SCHEMA);
+                }
+            }
+
+            if (resource.getColorXy() instanceof ColorXy xy) {
+                Gamut gamut = xy.getGamut();
+                if (gamut == null) {
+                    xy.setGamut(ColorUtil.DEFAULT_GAMUT);
+                }
+            }
+
+            Resource cacheEntry = getCachedResource(type);
+            if (cacheEntry != null) {
+                Setters.setResource(cacheEntry, resource);
+            } else {
+                // should never happen, but just in case
+                logger.warn("{} -> updateLightCacheRequiredFields() -> missing cache light resource", resourceId);
+            }
+            updateLightCacheRequiredFieldsDone = true;
         }
     }
 }
