@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -194,7 +194,7 @@ public class SuccessServlet extends AbstractShowPageServlet {
          *         representation for the given language code.
          */
         public static Optional<Language> fromCode(String code) {
-            Locale locale = new Locale(code);
+            Locale locale = Locale.of(code);
             String name = locale.getDisplayLanguage(locale);
             if (name.isEmpty()) {
                 return Optional.empty();
