@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -201,7 +201,7 @@ public final class QbusCommunication extends BaseThingHandler {
         qbusListenerRunning = false;
         ctdConnected = false;
 
-        logger.trace("Communication stopped from thread {}", Thread.currentThread().getId());
+        logger.trace("Communication stopped from thread {}", Thread.currentThread().threadId());
     }
 
     /**
@@ -268,7 +268,7 @@ public final class QbusCommunication extends BaseThingHandler {
         }
 
         qbusListenerRunning = false;
-        logger.trace("Event listener thread stopped on thread {}", Thread.currentThread().getId());
+        logger.trace("Event listener thread stopped on thread {}", Thread.currentThread().threadId());
     }
 
     /**
