@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,6 +15,7 @@ package org.openhab.binding.synopanalyzer.internal.handler;
 import static org.openhab.binding.synopanalyzer.internal.SynopAnalyzerBindingConstants.*;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
@@ -23,6 +24,7 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
@@ -32,6 +34,7 @@ import javax.ws.rs.HttpMethod;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
+import org.openhab.binding.synopanalyzer.internal.WindBarbGenerator;
 import org.openhab.binding.synopanalyzer.internal.config.SynopAnalyzerConfiguration;
 import org.openhab.binding.synopanalyzer.internal.stationdb.Station;
 import org.openhab.binding.synopanalyzer.internal.synop.Overcast;
@@ -46,8 +49,10 @@ import org.openhab.core.library.types.DateTimeType;
 import org.openhab.core.library.types.DecimalType;
 import org.openhab.core.library.types.PointType;
 import org.openhab.core.library.types.QuantityType;
+import org.openhab.core.library.types.RawType;
 import org.openhab.core.library.types.StringType;
 import org.openhab.core.library.unit.SIUnits;
+import org.openhab.core.library.unit.Units;
 import org.openhab.core.thing.ChannelUID;
 import org.openhab.core.thing.Thing;
 import org.openhab.core.thing.ThingStatus;
@@ -75,6 +80,7 @@ public class SynopAnalyzerHandler extends BaseThingHandler {
     private static final String OGIMET_SYNOP_PATH = "http://www.ogimet.com/cgi-bin/getsynop?block=%s&begin=%s";
     private static final int REQUEST_TIMEOUT_MS = 5000;
     private static final DateTimeFormatter SYNOP_DATE_FORMAT = DateTimeFormatter.ofPattern("yyyyMMddHH00");
+    private static final WindBarbGenerator WB_GENERATOR = new WindBarbGenerator();
     private static final double KASTEN_POWER = 3.4;
     private static final double OCTA_MAX = 8.0;
 
@@ -82,7 +88,7 @@ public class SynopAnalyzerHandler extends BaseThingHandler {
     private final LocationProvider locationProvider;
     private final List<Station> stations;
 
-    private Optional<ScheduledFuture<?>> refreshJob = Optional.empty();
+    private @Nullable ScheduledFuture<?> refreshJob;
     private @NonNullByDefault({}) String formattedStationId;
 
     public SynopAnalyzerHandler(Thing thing, LocationProvider locationProvider, List<Station> stations) {
@@ -104,8 +110,8 @@ public class SynopAnalyzerHandler extends BaseThingHandler {
 
         updateStatus(ThingStatus.UNKNOWN);
 
-        refreshJob = Optional.of(scheduler.scheduleWithFixedDelay(this::updateChannels, 0,
-                configuration.refreshInterval, TimeUnit.MINUTES));
+        refreshJob = scheduler.scheduleWithFixedDelay(this::updateChannels, 0, configuration.refreshInterval,
+                TimeUnit.MINUTES);
     }
 
     private void discoverAttributes(int stationId, @Nullable PointType serverLocation) {
@@ -131,13 +137,13 @@ public class SynopAnalyzerHandler extends BaseThingHandler {
             String answer = HttpUtil.executeUrl(HttpMethod.GET, url, REQUEST_TIMEOUT_MS);
             List<String> messages = Arrays.asList(answer.split("\n"));
             if (!messages.isEmpty()) {
-                String message = messages.get(messages.size() - 1);
+                String message = messages.getLast();
                 logger.debug(message);
                 if (message.startsWith(formattedStationId)) {
                     logger.debug("Valid Synop message received");
 
                     List<String> messageParts = Arrays.asList(message.split(","));
-                    String synopMessage = messageParts.get(messageParts.size() - 1);
+                    String synopMessage = messageParts.getLast();
 
                     return createSynopObject(synopMessage);
                 }
@@ -167,6 +173,7 @@ public class SynopAnalyzerHandler extends BaseThingHandler {
     private State getChannelState(String channelId, Synop synop) {
         int octa = synop.getOcta();
         Integer direction = synop.getWindDirection();
+        QuantityType<Speed> windSpeed = getWindStrength(synop);
         switch (channelId) {
             case HORIZONTAL_VISIBILITY:
                 return new StringType(synop.getHorizontalVisibility().name());
@@ -181,7 +188,7 @@ public class SynopAnalyzerHandler extends BaseThingHandler {
                 return UnDefType.NULL;
             case OVERCAST:
                 Overcast overcast = Overcast.fromOcta(octa);
-                return overcast == Overcast.UNDEFINED ? UnDefType.NULL : new StringType(overcast.name());
+                return Overcast.UNDEFINED.equals(overcast) ? UnDefType.NULL : new StringType(overcast.name());
             case PRESSURE:
                 return new QuantityType<>(synop.getPressure(), PRESSURE_UNIT);
             case TEMPERATURE:
@@ -193,10 +200,16 @@ public class SynopAnalyzerHandler extends BaseThingHandler {
                         : UnDefType.NULL;
             case WIND_STRENGTH:
                 return getWindStrength(synop);
+            case WIND_BARB:
+                if (direction == null) {
+                    return UnDefType.NULL;
+                }
+                QuantityType<Speed> wsKnot = Objects.requireNonNull(windSpeed.toUnit(Units.KNOT));
+                String windBarbs = WB_GENERATOR.generateSVG(wsKnot.doubleValue(), direction);
+                return new RawType(windBarbs.getBytes(StandardCharsets.UTF_8), "image/svg+xml");
             case WIND_SPEED_BEAUFORT:
-                QuantityType<Speed> wsKpH = getWindStrength(synop).toUnit(SIUnits.KILOMETRE_PER_HOUR);
-                return wsKpH != null ? new DecimalType(Math.round(Math.pow(wsKpH.floatValue() / 3.01, 0.666666666)))
-                        : UnDefType.NULL;
+                QuantityType<Speed> wsKpH = Objects.requireNonNull(windSpeed.toUnit(SIUnits.KILOMETRE_PER_HOUR));
+                return new DecimalType(Math.round(Math.pow(wsKpH.floatValue() / 3.01, 0.666666666)));
             case TIME_UTC:
                 ZonedDateTime now = ZonedDateTime.now(ZoneOffset.UTC);
                 int year = synop.getYear() == 0 ? now.getYear() : synop.getYear();
@@ -236,8 +249,10 @@ public class SynopAnalyzerHandler extends BaseThingHandler {
 
     @Override
     public void dispose() {
-        refreshJob.ifPresent(job -> job.cancel(true));
-        refreshJob = Optional.empty();
+        if (refreshJob instanceof ScheduledFuture job) {
+            job.cancel(true);
+        }
+        refreshJob = null;
     }
 
     @Override
