@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,25 +12,39 @@
  */
 package org.openhab.binding.vigicrues.internal.api;
 
-import java.io.IOException;
+import static org.openhab.binding.vigicrues.internal.VigiCruesBindingConstants.BINDING_ID;
+
+import java.security.KeyManagementException;
+import java.security.NoSuchAlgorithmException;
 import java.time.ZonedDateTime;
 import java.util.Locale;
-
-import javax.ws.rs.HttpMethod;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
+import org.eclipse.jetty.client.HttpClient;
+import org.eclipse.jetty.client.api.ContentResponse;
+import org.eclipse.jetty.client.api.Request;
+import org.eclipse.jetty.client.util.FutureResponseListener;
+import org.eclipse.jetty.http.HttpStatus;
+import org.eclipse.jetty.util.ssl.SslContextFactory;
 import org.openhab.binding.vigicrues.internal.dto.hubeau.HubEauResponse;
-import org.openhab.binding.vigicrues.internal.dto.opendatasoft.OpenDatasoftResponse;
 import org.openhab.binding.vigicrues.internal.dto.vigicrues.CdStationHydro;
 import org.openhab.binding.vigicrues.internal.dto.vigicrues.InfoVigiCru;
+import org.openhab.binding.vigicrues.internal.dto.vigicrues.ObservationAnswer;
+import org.openhab.binding.vigicrues.internal.dto.vigicrues.StaEntVigiCruAnswer;
 import org.openhab.binding.vigicrues.internal.dto.vigicrues.TerEntVigiCru;
-import org.openhab.binding.vigicrues.internal.dto.vigicrues.TronEntVigiCru;
 import org.openhab.core.i18n.TimeZoneProvider;
-import org.openhab.core.io.net.http.HttpUtil;
+import org.openhab.core.io.net.http.HttpClientFactory;
 import org.openhab.core.library.types.PointType;
+import org.osgi.service.component.ComponentContext;
 import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.Deactivate;
 import org.osgi.service.component.annotations.Reference;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
@@ -42,18 +56,51 @@ import com.google.gson.JsonSyntaxException;
  * url and transform the answer in the appropriate dto class
  *
  * @author Gaël L'hopital - Initial contribution
+ * @author Laurent Arnal - fix to work with 2026 api version
  */
 
 @Component(service = ApiHandler.class)
 @NonNullByDefault
 public class ApiHandler {
-    private static final String HUBEAU_URL = "https://hubeau.eaufrance.fr/api/v1/hydrometrie/referentiel/stations?format=json&size=2000";
-    private static final int TIMEOUT_MS = 30000;
+    private static final int TIMEOUT_S = 30;
+    private static final int MAX_RETRY_ATTEMPS = 3;
 
+    private final Logger logger = LoggerFactory.getLogger(ApiHandler.class);
+    private final HttpClient httpClient;
     private final Gson gson;
 
+    private static final int TERRITOIRE_ENTITY = 5;
+    private static final int TRONCON_ENTITY = 8;
+    private static final int STATION_ENTITY = 7;
+
+    private static final String BASE_URL = "https://www.vigicrues.gouv.fr/services/";
+    private static final String INFO_URL = BASE_URL + "InfoVigiCru.geojson";
+    private static final String TRONCON_URL = BASE_URL + "TronEntVigiCru.json?TypEntVigiCru=%s&CdEntVigiCru=%s";
+    private static final String TERITOIRE_URL = BASE_URL + "TerEntVigiCru.json?TypEntVigiCru=%s&CdEntVigiCru=%s";
+    private static final String STATION_URL = BASE_URL + "StaEntVigiCru.json?TypEntVigiCru=%s&CdEntVigiCru=%s";
+    private static final String STATION_DETAILS_URL = BASE_URL + "station.json/index.php?CdStationHydro=%s";
+    private static final String OBSERVATION_URL = BASE_URL
+            + "observations.json/index.php?CdStationHydro=%s&FormatDate=iso&GrdSerie=%s";
+
+    private static final String HUBEAU_URL = "https://hubeau.eaufrance.fr/api/v2/hydrometrie/referentiel/stations?format=json&size=2000";
+
     @Activate
-    public ApiHandler(@Reference TimeZoneProvider timeZoneProvider) {
+    public ApiHandler(@Reference TimeZoneProvider timeZoneProvider,
+            final @Reference HttpClientFactory httpClientFactory) {
+        SslContextFactory sslContextFactory = new SslContextFactory.Client();
+
+        try {
+            httpClient = httpClientFactory.createHttpClient(BINDING_ID, sslContextFactory);
+            httpClient.setResponseBufferSize(20971520);
+            httpClient.start();
+        } catch (NoSuchAlgorithmException e) {
+            throw new IllegalArgumentException("Exception occurred while requesting the SSL encryption algorithm", e);
+        } catch (KeyManagementException e) {
+            throw new IllegalArgumentException("Exception occurred while initialising the SSL context.", e);
+        } catch (Exception e) {
+            throw new IllegalArgumentException("Unable to start Jetty HttpClient.", e);
+        }
+
         this.gson = new GsonBuilder().registerTypeAdapter(ZonedDateTime.class,
                 (JsonDeserializer<ZonedDateTime>) (json, type, jsonDeserializationContext) -> ZonedDateTime
                         .parse(json.getAsJsonPrimitive().getAsString())
@@ -61,38 +108,77 @@ public class ApiHandler {
                 .create();
     }
 
-    private <T> T execute(String url, Class<T> responseType) throws VigiCruesException {
+    @Deactivate
+    protected void deactivate(ComponentContext componentContext) {
         try {
-            String jsonResponse = HttpUtil.executeUrl(HttpMethod.GET, url, TIMEOUT_MS);
-            return gson.fromJson(jsonResponse, responseType);
-        } catch (IOException | JsonSyntaxException e) {
+            httpClient.stop();
+        } catch (Exception e) {
+            logger.warn("Unable to stop Jetty HttpClient {}", e.getMessage());
+        }
+    }
+
+    private <T> T execute(String url, Class<T> responseType) throws VigiCruesException {
+        String jsonResponse = "";
+        int retry = 0;
+        try {
+            while (retry < MAX_RETRY_ATTEMPS) {
+                retry++;
+
+                Request req = httpClient.newRequest(url).timeout(TIMEOUT_S, TimeUnit.SECONDS).method("GET");
+                req.header("User-Agent",
+                        "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/144.0.0.0 Safari/537.36");
+                req.header("Accept",
+                        "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7");
+                req.header("Accept-Language", "en-US,en;q=0.9,fr-FR;q=0.8,fr;q=0.7");
+
+                FutureResponseListener listener = new FutureResponseListener(req, 50 * 1024 * 1024);
+                req.send(listener);
+
+                ContentResponse response = listener.get(TIMEOUT_S, TimeUnit.SECONDS);
+
+                int status = response.getStatus();
+                if (status == HttpStatus.OK_200) {
+                    jsonResponse = response.getContentAsString();
+                    if (jsonResponse.contains("Site en maintenance")) {
+                        Thread.sleep(200);
+                        continue;
+                    }
+                    return gson.fromJson(jsonResponse, responseType);
+                }
+            }
+            throw new VigiCruesException(("Request failed after %d retry %s").formatted(MAX_RETRY_ATTEMPS, url));
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new VigiCruesException("Thread interrupted while calling API", e);
+        } catch (TimeoutException | ExecutionException e) {
+            throw new VigiCruesException(e);
+        } catch (JsonSyntaxException e) {
             throw new VigiCruesException(e);
         }
     }
 
-    public InfoVigiCru getTronconStatus(String tronconId) throws VigiCruesException {
-        final String baseUrl = "https://www.vigicrues.gouv.fr/services/1/InfoVigiCru.jsonld/?TypEntVigiCru=8&CdEntVigiCru=%s";
-        return execute(String.format(baseUrl, tronconId), InfoVigiCru.class);
+    public InfoVigiCru getTronconStatus() throws VigiCruesException {
+        return execute(INFO_URL, InfoVigiCru.class);
     }
 
-    public TronEntVigiCru getTroncon(String stationId) throws VigiCruesException {
-        final String baseUrl = "https://www.vigicrues.gouv.fr/services/1/TronEntVigiCru.jsonld/?TypEntVigiCru=8&CdEntVigiCru=%s";
-        return execute(String.format(baseUrl, stationId), TronEntVigiCru.class);
+    public TerEntVigiCru getTroncon(String stationId) throws VigiCruesException {
+        return execute(TRONCON_URL.formatted(TRONCON_ENTITY, stationId), TerEntVigiCru.class);
     }
 
     public TerEntVigiCru getTerritoire(String stationId) throws VigiCruesException {
-        final String baseUrl = "https://www.vigicrues.gouv.fr/services/1/TerEntVigiCru.jsonld/?TypEntVigiCru=5&CdEntVigiCru=%s";
-        return execute(String.format(baseUrl, stationId), TerEntVigiCru.class);
+        return execute(TERITOIRE_URL.formatted(TERRITOIRE_ENTITY, stationId), TerEntVigiCru.class);
+    }
+
+    public StaEntVigiCruAnswer getTerritoireDetails(String stationId) throws VigiCruesException {
+        return execute(STATION_URL.formatted(TERRITOIRE_ENTITY, stationId), StaEntVigiCruAnswer.class);
+    }
+
+    public StaEntVigiCruAnswer getStationFeeds(String stationId) throws VigiCruesException {
+        return execute(STATION_URL.formatted(STATION_ENTITY, stationId), StaEntVigiCruAnswer.class);
     }
 
     public CdStationHydro getStationDetails(String stationId) throws VigiCruesException {
-        final String baseUrl = "https://www.vigicrues.gouv.fr/services/station.json/index.php?CdStationHydro=%s";
-        return execute(String.format(baseUrl, stationId), CdStationHydro.class);
-    }
-
-    public OpenDatasoftResponse getMeasures(String stationId) throws VigiCruesException {
-        final String baseUrl = "https://public.opendatasoft.com/api/records/1.0/search/?dataset=vigicrues&sort=timestamp&q=%s";
-        return execute(String.format(baseUrl, stationId), OpenDatasoftResponse.class);
+        return execute(STATION_DETAILS_URL.formatted(stationId), CdStationHydro.class);
     }
 
     public HubEauResponse discoverStations(PointType location, int range) throws VigiCruesException {
@@ -103,6 +189,18 @@ public class ApiHandler {
     }
 
     public HubEauResponse discoverStations(String stationId) throws VigiCruesException {
-        return execute(String.format("%s&code_station=%s", HUBEAU_URL, stationId), HubEauResponse.class);
+        return execute("%s&code_station=%s".formatted(HUBEAU_URL, stationId), HubEauResponse.class);
+    }
+
+    public ObservationAnswer getHeights(String stationId) throws VigiCruesException {
+        return getObservations(stationId, "H");
+    }
+
+    public ObservationAnswer getFlows(String stationId) throws VigiCruesException {
+        return getObservations(stationId, "Q");
+    }
+
+    private ObservationAnswer getObservations(String stationId, String obsType) throws VigiCruesException {
+        return execute(OBSERVATION_URL.formatted(stationId, obsType), ObservationAnswer.class);
     }
 }
