@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -104,7 +104,7 @@ public class MacTTSService extends AbstractCachedTTSService {
      */
     private final Set<Voice> initVoices() {
         try {
-            Process process = Runtime.getRuntime().exec("say -v ?");
+            Process process = Runtime.getRuntime().exec(new String[] { "say", "-v", "?" });
             try (InputStreamReader inputStreamReader = new InputStreamReader(process.getInputStream());
                     BufferedReader bufferedReader = new BufferedReader(inputStreamReader)) {
                 return bufferedReader.lines().map(MacTTSVoice::new).collect(Collectors.toSet());
